feat: Parse FB zip and deserialize

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "solid-profile-importer"
+name = "solidprofileimporter"
 version = "0.1.0"
 authors = ["Sean McBride <spmcbride1201@gmail.com>"]
 edition = "2018"
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = { version = "1.0.101", features = ["derive"] }
+serde_json = "1.0.41"
+zip = "0.5.3"
