--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0.101", features = ["derive"] }
 serde_json = "1.0.41"
-zip = "0.5.3"
 rdf = "0.1.4"
 chrono = "0.4.9"
+clap = "2.33.0"
